import { Level } from "../../structured-errors/types"
import { Reporter } from "../reporter"
import * as reporterActions from "../redux/actions"

// TODO: report.error now DOES return something. Get rid of this spying mocking stuff

// report.error doesn't return anything, it creates a `structuredError` object and
// calls reporterInstance.error(structuredError)

// Spy on reporterInstance.error and mock its implementation so it
// returns structuredError

// We can then use the returned structuredError for snapshots.
jest
  .spyOn(reporterActions, `createLog`)
  // @ts-ignore
  .mockImplementation(structuredLog => structuredLog)

const getErrorMessages = (fn: jest.Mock): any =>
  fn.mock.calls
    .map(([firstArg]) => firstArg)
    .filter(structuredMessage => structuredMessage.level === `ERROR`)

describe(`report.error`, () => {
  let reporter: Reporter
  beforeEach(() => {
    ;(reporterActions.createLog as jest.Mock).mockClear()

    jest.isolateModules(() => {
      reporter = require("../reporter").reporter
      // We don't care about this
      reporter.log = jest.fn()
    })
  })

  it(`handles "String, Error" signature correctly`, () => {
    reporter.error(
      `Error string passed to reporter`,
      new Error(`Message from new Error`)
    )
    const generatedError = getErrorMessages(
      reporterActions.createLog as jest.Mock
    )[0]

    expect(generatedError).toMatchSnapshot({
      stack: expect.any(Array),
    })
  })

  it(`handles "Error" signature correctly`, () => {
    reporter.error(new Error(`Message from new Error`))
    const generatedError = getErrorMessages(
      reporterActions.createLog as jest.Mock
    )[0]
    expect(generatedError).toMatchSnapshot({
      stack: expect.any(Array),
    })
  })

  it(`handles "Array of Errors" signature correctly`, () => {
    reporter.error([
      new Error(`Message 1 from new Error`),
      new Error(`Message 2 from new Error`),
      new Error(`Message 3 from new Error`),
    ])

    const generatedErrors = getErrorMessages(
      reporterActions.createLog as jest.Mock
    )

    expect(generatedErrors.length).toEqual(3)

    // get final generated object
    const generatedError = generatedErrors[2]
    expect(generatedError).toMatchSnapshot({
      stack: expect.any(Array),
    })
  })

  it(`handles "structuredError" signature correctly`, () => {
    reporter.error({
      id: `95312`,
      context: {
        ref: `navigator`,
      },
    })
    const generatedError = getErrorMessages(
      reporterActions.createLog as jest.Mock
    )[0]
    expect(generatedError).toMatchSnapshot()
  })

  it(`handles "String" signature correctly`, () => {
    reporter.error(`Error created in Jest`)
    const generatedError = getErrorMessages(
      reporterActions.createLog as jest.Mock
    )[0]
    expect(generatedError).toMatchSnapshot()
  })

  it(`sets an error map if setErrorMap is called`, () => {
    reporter.setErrorMap({
      "1337": {
        text: (context): string => `Error text is ${context.someProp} `,
        level: Level.ERROR,
        docsUrl: `https://www.gatsbyjs.org/docs/gatsby-cli/#new`,
      },
    })

    expect(reporter.errorMap[`1337`]).toBeTruthy()
  })
})

describe(`report.deprecate`, () => {
  const level = `DEPRECATION`
  const code = "JEST"
  const text = "deprecate me"
  let reporter: Reporter
  beforeEach(() => {
    ;(reporterActions.createLog as jest.Mock).mockClear()

    jest.isolateModules(() => {
      reporter = require("../reporter").reporter
      // We don't care about this
      reporter.log = jest.fn()
    })
  })

  it(`should render deprecation notice`, () => {
    reporter.deprecate({
      code,
      text,
    })

    expect(reporterActions.createLog).toBeCalledWith({
      level,
      category: "USER",
      text,
      pluginName: undefined,
    })
  })

  it(`should use pluginName`, () => {
    reporter.deprecate({
      code,
      text,
      pluginName: "gatsby-plugin-jest",
    })

    expect(reporterActions.createLog).toBeCalledWith({
      level,
      category: "THIRD_PARTY",
      text,
      pluginName: "gatsby-plugin-jest",
    })
  })

  it(`should only call deprecation once`, () => {
    reporter.deprecate({
      code,
      text,
      pluginName: "gatsby-plugin-jest",
    })
    reporter.deprecate({
      code,
      text,
      pluginName: "gatsby-plugin-jest",
    })
    reporter.deprecate({
      code,
      text,
      pluginName: "gatsby-plugin-test",
    })

    expect(reporterActions.createLog).toBeCalledTimes(2)
    expect(reporterActions.createLog).toBeCalledWith({
      level,
      category: "THIRD_PARTY",
      text,
      pluginName: "gatsby-plugin-jest",
    })
    expect(reporterActions.createLog).toBeCalledWith({
      level,
      category: "THIRD_PARTY",
      text,
      pluginName: "gatsby-plugin-test",
    })
  })
})
